--- a/browser.html
+++ b/browser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Donut Browser MP</title>
+  <title>Donut Browser</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
  .btn {
@@ -32,7 +32,7 @@
 
 .bg-image {
   /* The image used */
-  background-image: url("2021-04-16.jpg");
+  background-image: url("1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg");
 
   /* Add the blur effect */
   filter: blur(8px);
@@ -179,11 +179,10 @@ body {font-family: Arial;}
 <body style="font-family:Verdana;color:black;">
   <div class="bg-image"></div>
   <div class="bg-text">
-  <h1><a style="text-decoration:none;" href="index.html">🔙</a> 🌐 Donut Browser<sup>MP</sup></h1>
+  <h1><a style="text-decoration:none;" href="index.html">🔙</a> 🌐 Donut Browser</h1>
 
-<script async src="https://cse.google.com/cse.js?cx=ee19ab206b28400bb">
-</script>
-<div class="gcse-search"></div>
+  <iframe src="https://bing.com/" width="100%" height="600" style="none">
+  </iframe>
 </div>
 </body>
 </html>
