--- a/games.html
+++ b/games.html
@@ -32,7 +32,7 @@
 
 .bg-image {
   /* The image used */
-  background-image: url("2021-04-16.jpg");
+  background-image: url("1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg");
 
   /* Add the blur effect */
   filter: blur(8px);
@@ -187,13 +187,13 @@ body {font-family: Arial;}
 <div class="content">
   <p>TETRIS by <b>FRADAR</b></p>
   <p><b>Availability : </b>Available/Free</p>
-  <a style="text-decorations:none;" href="tetris.html"><button>Play Now!</button></a>
+  <a style="text-decorations:none;" href="tetris.html"><button class="btn2">Play Now!</button></a>
 </div>
 <button type="button" class="collapsible">🎾 Table Tennis 2D</button>
 <div class="content">
   <p>Table Tennis 2D by <b>E and T Software</b></p>
   <p><b>Availability : </b>Available/Free</p>
-  <a style="text-decorations:none;" href="tt2d.html"><button>Play Now!</button></a>
+  <a style="text-decorations:none;" href="tt2d.html"><button class ="btn2">Play Now!</button></a>
 </div>
 </div>
 <script>
