--- a/copyv86.html
+++ b/copyv86.html
@@ -32,7 +32,7 @@
 
 .bg-image {
   /* The image used */
-  background-image: url("2021-04-16.jpg");
+  background-image: url("1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg");
 
   /* Add the blur effect */
   filter: blur(8px);
@@ -179,7 +179,7 @@ body {font-family: Arial;}
 <body style="font-family:Verdana;color:black;">
   <div class="bg-image"></div>
   <div class="bg-text">
-  <h1><a style="text-decoration:none;" href="index.html">🔙</a> 🖥️ Donut VM<sup>MP</sup> Copy v86</h1>
+  <h1><a style="text-decoration:none;" href="index.html">🔙</a> 🖥️ Donut VM Copy v86</h1>
 
 
 <iframe src="https://copy.sh/v86/" width="100%" height="600" style="none">
