--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 .bg-image {
   /* The image used */
-  background-image: url("2021-04-16.jpg");
+  background-image: url("1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg");
 
   /* Add the blur effect */
   filter: blur(8px);
@@ -152,20 +152,20 @@ body {font-family: Arial;}
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
-  <p>Welcome to DonutWebUI<sup>MP</sup></p>
+  <p>Welcome to DonutWebUI</p>
 </div>
 
 <div id="System" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>System</h1>
-  <h1>📀</h1><p><b>Donut</b>WebUI<sup>MP</sup></p>
-  <p><img src="2021-04-16.jpg" alt="Mavara Para" width="100" height="100"></p>
-  <p>Mavara Para</p>
+  <h1>📀</h1><p><b>Donut</b>WebUI<sup>Codename Kochi</sup></p>
+  <p><img src="1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg" alt="Kochi" width="100" height="100"></p>
+  <p>Kochi</p>
   <p>2K23 R3</p>
-  <p><code>Build 2307.02 R3 DHTMLK v23.07.01.512+</code></p>
+  <p><code>Build 2023.07.02.11.16 DHTMLK v23.07.01.512+</code></p>
   <button type="button" class="collapsible">What's New? 🔽</button>
   <div class="content">
-    <p>1. Updated User Interface</p>
+    <p>1. Beta Version, might be buggy</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
