--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@ body {font-family: Arial;}
   <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">📀 Home</button>
   <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
   <button class="tablinks" onclick="openMenu(event, 'Apps')">Apps</button>
+  <button class="tablinks" onclick="openMenu(event, 'Resources')">Resources</button>
 </div>
 
 <div class="bg-text">
@@ -162,13 +163,27 @@ body {font-family: Arial;}
   <p><img src="1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg" alt="Kochi" width="100" height="100"></p>
   <p>Kochi</p>
   <p>2K23 R3</p>
-  <p><code>Build 2023.07.02.11.16 DHTMLK v23.07.01.512+</code></p>
+  <p><code>Build 2023.07.02.11.53 DHTMLK v23.07.01.512+</code></p>
   <button type="button" class="collapsible">What's New? 🔽</button>
   <div class="content">
-    <p>1. Beta Version, might be buggy</p>
+    <p>1. DWUI App Framework 2</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
+</div>
+
+<div id="Resources" class="tabcontent">
+  <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
+  <h1>Resources</h1>
+  <pre>
+    <b>Desktop</b>          5.9KB
+    <b>Browser</b>         3.54KB
+    <b>Games</b>           4.38KB
+    <b>Tetris</b>          14.4KB
+    <b>Table Tennis 2D</b> 4.88KB
+    <b>Donut VM</b>        3.54KB
+    <b>Image Library</b>   1.96MB
+  </pre>
 </div>
 
 <div id="Apps" class="tabcontent">
