--- a/friv.html
+++ b/friv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Games</title>
+  <title>Online Games | Friv</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
  .btn {
@@ -177,45 +177,13 @@ body {font-family: Arial;}
 </style>
 </head>
 <body style="font-family:Verdana;color:black;">
-
   <div class="bg-image"></div>
   <div class="bg-text">
-  <h1><a style="text-decoration:none;" href="index.html">⬅</a> 🎮 Games</h1>
+  <h1><a style="text-decoration:none;" href="index.html">🔙</a> 🎮 Friv Online Games</h1>
 
-
-<button type="button" class="collapsible">🧱 Tetris</button>
-<div class="content">
-  <p>TETRIS by <b>FRADAR</b></p>
-  <p><b>Availability : </b>Available/Free</p>
-  <a style="text-decorations:none;" href="tetris.html"><button class="btn2">Play Now!</button></a>
+  <iframe src="http://www.friv.com/" width="100%" height="600" style="none">
+  </iframe>
 </div>
-<button type="button" class="collapsible">🎾 Table Tennis 2D</button>
-<div class="content">
-  <p>Table Tennis 2D by <b>E and T Software</b></p>
-  <p><b>Availability : </b>Available/Free</p>
-  <a style="text-decorations:none;" href="tt2d.html"><button class ="btn2">Play Now!</button></a>
-</div>
-<button type="button" class="collapsible">🎮 More Games</button>
-<div class="content">
-  <p>Play many kinds of games for free online from Friv.com</p>
-  <a style="text-decorations:none;" href="friv.html"><button class ="btn2">Play Now!</button></a>
-</div>
-</div>
-<script>
-var coll = document.getElementsByClassName("collapsible");
-var i;
-
-for (i = 0; i < coll.length; i++) {
-  coll[i].addEventListener("click", function() {
-    this.classList.toggle("active");
-    var content = this.nextElementSibling;
-    if (content.style.display === "block") {
-      content.style.display = "none";
-    } else {
-      content.style.display = "block";
-    }
-  });
-}
-</script>
 </body>
 </html>
+
