--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Donut WebUI MP 2K23 R3</title>
+<title>Donut WebUI Kochi 2K23 R3</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   .btn {
@@ -163,10 +163,11 @@ body {font-family: Arial;}
   <p><img src="1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg" alt="Kochi" width="100" height="100"></p>
   <p>Kochi</p>
   <p>2K23 R3</p>
-  <p><code>Build 2023.07.02.11.53 DHTMLK v23.07.01.512+</code></p>
+  <p><code>Build 2023.07.03.09.14 DHTMLK v23.07.01.512+</code></p>
   <button type="button" class="collapsible">What's New? 🔽</button>
   <div class="content">
-    <p>1. DWUI App Framework 2</p>
+    <p>1. Fixed many bugs</p>
+    <p>2. Added Friv Online Games Support</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
@@ -176,13 +177,14 @@ body {font-family: Arial;}
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Resources</h1>
   <pre>
-    <b>Desktop</b>          5.9KB
-    <b>Browser</b>         3.54KB
-    <b>Games</b>           4.38KB
-    <b>Tetris</b>          14.4KB
-    <b>Table Tennis 2D</b> 4.88KB
-    <b>Donut VM</b>        3.54KB
-    <b>Image Library</b>   1.96MB
+  <b>Desktop</b>           index.html
+  <b>Browser</b>           browser.html
+  <b>Games</b>             games.html
+  <b>Tetris</b>            tetris.html
+  <b>Table Tennis 2D</b>   tt2d.html
+  <b>Donut VM</b>          copyv86.html
+  <b>Image Library</b>     1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg
+  <b>Friv Online Games</b> friv.html
   </pre>
 </div>
 
