--- a/friv.html
+++ b/friv.html
@@ -179,7 +179,7 @@ body {font-family: Arial;}
 <body style="font-family:Verdana;color:black;">
   <div class="bg-image"></div>
   <div class="bg-text">
-  <h1><a style="text-decoration:none;" href="index.html">🔙</a> 🎮 Friv Online Games</h1>
+  <h1><a style="text-decoration:none;" href="games.html">🔙</a> 🎮 Friv Online Games</h1>
 
   <iframe src="http://www.friv.com/" width="100%" height="600" style="none">
   </iframe>
