--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ body {font-family: Arial;}
   <p><img src="1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg" alt="Kochi" width="100" height="100"></p>
   <p>Kochi</p>
   <p>2K23 R3</p>
-  <p><code>Build 2023.07.03.09.14 DHTMLK v23.07.01.512+</code></p>
+  <p><code>Build 2023.07.03.10.00 DHTMLK v23.07.01.512+</code></p>
   <button type="button" class="collapsible">What's New? 🔽</button>
   <div class="content">
     <p>1. Fixed many bugs</p>
-    <p>2. Added Friv Online Games Support</p>
+    <p>2. DWUI App Framework 3</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
