Update 5 Harmony (Kochi)
### Introducing Update 5 for Kochi:
* Finalized release name, "Harmony"
* Rolled back online game feature
* Added System Monitor in Resources
* Expected to Update to Stable release by update 6 to Harmony

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Donut WebUI Kochi 2K23 R3</title>
+<title>Donut WebUI Harmony BETA 2K23 R3</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   .btn {
@@ -144,9 +144,9 @@ body {font-family: Arial;}
 
   <div class="tab">
   <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">📀 Home</button>
-  <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
+  <button class="tablinks" onclick="openMenu(event, 'About')">About</button>
   <button class="tablinks" onclick="openMenu(event, 'Apps')">Apps</button>
-  <button class="tablinks" onclick="openMenu(event, 'Resources')">Resources</button>
+  <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
 </div>
 
 <div class="bg-text">
@@ -156,36 +156,29 @@ body {font-family: Arial;}
   <p>Welcome to DonutWebUI</p>
 </div>
 
-<div id="System" class="tabcontent">
+<div id="About" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-  <h1>System</h1>
-  <h1>📀</h1><p><b>Donut</b>WebUI<sup>Codename Kochi</sup></p>
+  <h1>About</h1>
+  <h1>📀</h1><p><b>Donut</b>WebUI Harmony <sup>BETA</sup></p>
   <p><img src="1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg" alt="Kochi" width="100" height="100"></p>
-  <p>Kochi</p>
+  <p>Harmony in Kochi</p>
   <p>2K23 R3</p>
-  <p><code>Build 2023.07.03.10.00 DHTMLK v23.07.01.512+</code></p>
+  <p><code>Build 2023.07.03.12.29 DHTMLK v23.07.01.512+</code></p>
   <button type="button" class="collapsible">What's New? 🔽</button>
   <div class="content">
     <p>1. Fixed many bugs</p>
-    <p>2. DWUI App Framework 3</p>
+    <p>2. Rolled Back Friv</p>
+    <p>3. Updated Interface</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
 </div>
 
-<div id="Resources" class="tabcontent">
+<div id="System" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-  <h1>Resources</h1>
-  <pre>
-  <b>Desktop</b>           index.html
-  <b>Browser</b>           browser.html
-  <b>Games</b>             games.html
-  <b>Tetris</b>            tetris.html
-  <b>Table Tennis 2D</b>   tt2d.html
-  <b>Donut VM</b>          copyv86.html
-  <b>Image Library</b>     1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg
-  <b>Friv Online Games</b> friv.html
-  </pre>
+  <h1>System</h1>
+  <iframe src="sysmon.html" width="100%" height="400" style="none">
+  </iframe>
 </div>
 
 <div id="Apps" class="tabcontent">
