--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Donut WebUI Harmony BETA 2K23 R3</title>
+<title>Donut WebUI Harmony 2K23 R3</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   .btn {
@@ -153,22 +153,20 @@ body {font-family: Arial;}
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
-  <p>Welcome to DonutWebUI</p>
+  <p>Welcome to DonutWebUI Harmony</p>
 </div>
 
 <div id="About" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>About</h1>
-  <h1>📀</h1><p><b>Donut</b>WebUI Harmony <sup>BETA</sup></p>
+  <h1>📀</h1><p><b>Donut</b>WebUI Harmony</p>
   <p><img src="1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg" alt="Kochi" width="100" height="100"></p>
   <p>Harmony in Kochi</p>
   <p>2K23 R3</p>
-  <p><code>Build 2023.07.03.12.29 DHTMLK v23.07.01.512+</code></p>
+  <p><code>2307.03 DHTMLK v23.07.01.512+</code></p>
   <button type="button" class="collapsible">What's New? 🔽</button>
   <div class="content">
-    <p>1. Fixed many bugs</p>
-    <p>2. Rolled Back Friv</p>
-    <p>3. Updated Interface</p>
+    <p>1. Stable release</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
