--- a/index.html
+++ b/index.html
@@ -164,9 +164,10 @@ body {font-family: Arial;}
   <p>Harmony in Kochi</p>
   <p>2K23 R3</p>
   <p><code>2307.03 DHTMLK v23.07.01.512+</code></p>
-  <button type="button" class="collapsible">What's New? 🔽</button>
+  <button type="button" class="collapsible">What's New in Update 1? 🔽</button>
   <div class="content">
-    <p>1. Stable release</p>
+    <p>1. Fixed many bugs</p>
+    <p>2. Security Checks done</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
