--- a/browser.html
+++ b/browser.html
@@ -169,14 +169,14 @@ body {font-family: Arial;}
   <h1>📀</h1><p><b>Donut</b>WebUI Harmony</p>
   <p><img src="1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg" alt="Kochi" width="100" height="100"></p>
   <p>Harmony in Kochi</p>
-  <p>2K23 R4 Preview</p>
-  <p><code>2307.03 DHTMLK v23.07.01.512+</code></p>
+  <p>2K23 R4</p>
+  <p><code>2307.03</code></p>
 
  
 
   <button type="button" class="collapsible">What's New in Core Update R4? 🔽</button>
   <div class="content">
-    <p>1. New UI Preview (Unstable)</p>
+    <p>1. New UI Preview</p>
 
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
