--- a/index.html
+++ b/index.html
@@ -170,14 +170,9 @@ body {font-family: Arial;}
   <button type="button" class="collapsible">What's New in Core Update R4? 🔽</button>
   <div class="content">
     <p>1. New UI for Apps</p>
-    <p>2. Games App remains unchanged, and is not expected to receive any updates for it's UI</p>
+    <p>2. Games App remains unchanged and is not expected to receive any updates for it's UI</p>
 
 
-  <p>2K23 R3</p>
-  <p><code>2307.03 DHTMLK v23.07.01.512+</code></p>
-  <button type="button" class="collapsible">What's New in Update 2? 🔽</button>
-  <div class="content">
-    <p>1. Fixed many bugs</p>
 
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
