--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@ body {font-family: Arial;}
 
 
   <div class="tab">
-  <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">📀 Home</button>
-  <button class="tablinks" onclick="openMenu(event, 'About')">About</button>
-  <button class="tablinks" onclick="openMenu(event, 'Apps')">Apps</button>
-  <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
+  <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">🏠</button>
+  <button class="tablinks" onclick="openMenu(event, 'About')">📀</button>
+  <button class="tablinks" onclick="openMenu(event, 'Apps')">💽</button>
+  <button class="tablinks" onclick="openMenu(event, 'System')">🖥️</button>
 </div>
 
 <div class="bg-text">
