--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@ body {font-family: Arial;}
 
 
   <div class="tab">
-  <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">🏠</button>
-  <button class="tablinks" onclick="openMenu(event, 'About')">📀</button>
-  <button class="tablinks" onclick="openMenu(event, 'Apps')">💽</button>
-  <button class="tablinks" onclick="openMenu(event, 'System')">🖥️</button>
+  <button class="tablinks" onclick="openMenu(event, 'Desktop')" id="defaultOpen">🏠Home</button>
+  <button class="tablinks" onclick="openMenu(event, 'About')">📀myDonut</button>
+  <button class="tablinks" onclick="openMenu(event, 'Apps')">💽Apps</button>
+  <button class="tablinks" onclick="openMenu(event, 'System')">🖥️GPU</button>
 </div>
 
 <div class="bg-text">
@@ -158,7 +158,7 @@ body {font-family: Arial;}
 
 <div id="About" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-  <h1>About</h1>
+  <h1>myDonut</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI Harmony</p>
   <p><img src="1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg" alt="Kochi" width="100" height="100"></p>
   <p>Harmony in Kochi</p>
@@ -181,7 +181,7 @@ body {font-family: Arial;}
 
 <div id="System" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-  <h1>System</h1>
+  <h1>GPU</h1>
   <iframe src="sysmon.html" width="100%" height="400" style="none">
   </iframe>
 </div>
