--- a/copyv86.html
+++ b/copyv86.html
@@ -145,10 +145,10 @@ body {font-family: Arial;}
 
 
   <div class="tab">
-  <button class="tablinks" onclick="openMenu(event, 'Desktop')">📀 Home</button>
-  <button class="tablinks" onclick="openMenu(event, 'About')">About</button>
-  <button class="tablinks" onclick="openMenu(event, 'Apps')">Apps</button>
-  <button class="tablinks" onclick="openMenu(event, 'System')">System</button>
+  <button class="tablinks" onclick="openMenu(event, 'Desktop')">🏠Home</button>
+  <button class="tablinks" onclick="openMenu(event, 'About')">📀myDonut</button>
+  <button class="tablinks" onclick="openMenu(event, 'Apps')">💽Apps</button>
+  <button class="tablinks" onclick="openMenu(event, 'System')">🖥️GPU</button>
 </div>
 
 <div class="bg-text">
@@ -165,7 +165,7 @@ body {font-family: Arial;}
 
 <div id="About" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-  <h1>About</h1>
+  <h1>myDonut</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI Harmony</p>
   <p><img src="1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg" alt="Kochi" width="100" height="100"></p>
   <p>Harmony in Kochi</p>
@@ -185,7 +185,7 @@ body {font-family: Arial;}
 
 <div id="System" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
-  <h1>System</h1>
+  <h1>GPU</h1>
   <iframe src="sysmon.html" width="100%" height="400" style="none">
   </iframe>
 </div>
