--- a/browser.html
+++ b/browser.html
@@ -32,7 +32,7 @@
 
 .bg-image {
   /* The image used */
-  background-image: url("1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg");
+  background-image: url("Achenkoil.jpg");
 
   /* Add the blur effect */
   filter: blur(8px);
@@ -155,28 +155,29 @@ body {font-family: Arial;}
   
   <h1><a style="text-decoration:none;" href="index.html">🔙</a> 🌐 Donut Browser</h1>
 
-  <iframe src="https://bing.com/" width="100%" height="500" style="none">
+  <iframe src="https://bing.com/" style="width:100%;height:450px;">
   </iframe>
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
-  <p>Welcome to DonutWebUI Harmony</p>
+  <p>Welcome to DonutWebUI Pandalam</p>
 </div>
 
 <div id="About" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>myDonut</h1>
-  <h1>📀</h1><p><b>Donut</b>WebUI Harmony</p>
-  <p><img src="1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg" alt="Kochi" width="100" height="100"></p>
-  <p>Harmony in Kochi</p>
+  <h1>📀</h1><p><b>Donut</b>WebUI Pandalam</p>
+  <p><img src="Achenkoil.jpg" alt="Kochi" width="100" height="100"></p>
+  <p>Pandalam</p>
   <p>2K23 R4</p>
-  <p><code>2307.03</code></p>
+  <p><code>2307.04</code></p>
 
  
 
-  <button type="button" class="collapsible">What's New in Core Update R4? 🔽</button>
+  <button type="button" class="collapsible">What's New in Pandalam? 🔽</button>
   <div class="content">
-    <p>1. New UI Preview</p>
+    <p>1. New NavBar UI</p>
+    <p>2. New Game</p>
 
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
@@ -186,8 +187,7 @@ body {font-family: Arial;}
 <div id="System" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>GPU</h1>
-  <iframe src="sysmon.html" width="100%" height="400" style="none">
-  </iframe>
+  <iframe src="sysmon.html" style="width:100%;height:400;"></iframe>
 </div>
 
 <div id="Apps" class="tabcontent">
