--- a/games.html
+++ b/games.html
@@ -187,13 +187,19 @@ body {font-family: Arial;}
 <div class="content">
   <p>TETRIS by <b>FRADAR</b></p>
   <p><b>Availability : </b>Available/Free</p>
-  <a style="text-decorations:none;" href="tetris.html"><button class="btn2">Play Now!</button></a>
+  <a style="text-decoration:none;" href="tetris.html"><button class="btn2">Play Now!</button></a>
 </div>
 <button type="button" class="collapsible">🎾 Table Tennis 2D</button>
 <div class="content">
   <p>Table Tennis 2D by <b>E and T Software</b></p>
   <p><b>Availability : </b>Available/Free</p>
-  <a style="text-decorations:none;" href="tt2d.html"><button class ="btn2">Play Now!</button></a>
+  <a style="text-decoration:none;" href="tt2d.html"><button class ="btn2">Play Now!</button></a>
+</div>
+<button type="button" class="collapsible">🔫 Sauerbraten 3D</button>
+<div class="content">
+  <p>Sauerbraten 3D by <b>Kripken</b></p>
+  <p><b>Availability : </b>Available/Free</p>
+  <a style="text-decoration:none;" href="bb.html"><button class ="btn2">Play Now!</button></a>
 </div>
 </div>
 <script>
