--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Donut WebUI Harmony 2K23 R4</title>
+<title>Donut WebUI Pandalam 2K23 R4</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   .btn {
@@ -153,24 +153,24 @@ body {font-family: Arial;}
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
-  <p>Welcome to DonutWebUI Harmony</p>
+  <p>Welcome to DonutWebUI Pandalam</p>
 </div>
 
 <div id="About" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>myDonut</h1>
-  <h1>📀</h1><p><b>Donut</b>WebUI Harmony</p>
-  <p><img src="1034623-kochi-kerala-blues-back-water-lagoons-sunset-beach-ship-channels-chinese-nets-skyscraper-water-city-15.jpg" alt="Kochi" width="100" height="100"></p>
-  <p>Harmony in Kochi</p>
+  <h1>📀</h1><p><b>Donut</b>WebUI Pandalam</p>
+  <p><img src="Achenkoil.jpg" alt="Kochi" width="100" height="100"></p>
+  <p>Pandalam</p>
 
   <p>2K23 R4</p>
-  <p><code>2307.03</code></p>
+  <p><code>2307.04</code></p>
 
 
-  <button type="button" class="collapsible">What's New in Core Update R4? 🔽</button>
+  <button type="button" class="collapsible">What's New in Pandalam? 🔽</button>
   <div class="content">
-    <p>1. New UI for Apps</p>
-    <p>2. Games App remains unchanged and is not expected to receive any updates for it's UI</p>
+    <p>1. New NavBar UI</p>
+    <p>2. New Game</p>
 
 
 
@@ -182,8 +182,7 @@ body {font-family: Arial;}
 <div id="System" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>GPU</h1>
-  <iframe src="sysmon.html" width="100%" height="400" style="none">
-  </iframe>
+  <iframe src="sysmon.html" style="width:100%;height:400;" > </iframe>
 </div>
 
 <div id="Apps" class="tabcontent">
