--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   background-image: url("Achenkoil.jpg");
 
   /* Add the blur effect */
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
+  /* filter: blur(8px);
+  -webkit-filter: blur(8px); */
 
   /* Full height */
   height: 90%;
