--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
 
 /* Position text in the middle of the page/image */
 .bg-text {
+  filter: blur(8px);
+  -webkit-filter: blur(8px);
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
   color: white;
