--- a/bb.html
+++ b/bb.html
@@ -17,7 +17,7 @@
   </head>
   <h1><a style="text-decoration:none;" href="games.html">⬅</a> Sauerbraten 3D</h1>
   <body>
-     <iframe src="https://kripken.github.io/BananaBread/cube2/bb.html" style="height:600;width:100%;"></iframe>
+     <iframe src="https://kripken.github.io/BananaBread/cube2/bb.html" style="height:600px;width:100%;"></iframe>
   </body>
 </html>
 
