--- a/copyv86.html
+++ b/copyv86.html
@@ -169,15 +169,14 @@ body {font-family: Arial;}
   <h1>📀</h1><p><b>Donut</b>WebUI Harmony</p>
   <p><img src="Achenkoil.jpg" alt="Kochi" width="100" height="100"></p>
   <p>Pandalam</p>
-  <p>2K23 R4</p>
-  <p><code>2307.04</code></p>
+  <p>2K23 R5 BETA</p>
+  <p><code>2307.06</code></p>
 
  
 
   <button type="button" class="collapsible">What's New in Pandalam? 🔽</button>
   <div class="content">
-    <p>1. New NavBar UI</p>
-    <p>2. New Game</p>
+    <p>1. Calculator</p>
 
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
@@ -193,7 +192,7 @@ body {font-family: Arial;}
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
-  <a style="text-decoration:none;" href="browser.html"> <button class="btn"><h1>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button class="btn"><h1>🎮</h1></button> </a> <a style="text-decoration:none;" href="copyv86.html"> <button class="btn"><h1>🖥️</h1></button> </a>
+  <a style="text-decoration:none;" href="browser.html"> <button class="btn"><h1>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button class="btn"><h1>🎮</h1></button> </a> <a style="text-decoration:none;" href="copyv86.html"> <button class="btn"><h1>🖥️</h1></button> </a> <a style="text-decoration:none;" href="calculator.html"> <button class="btn"><h1>🧮</h1></button> </a>
 </div>
 </div>
 <script>
