--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Donut WebUI Pandalam 2K23 R4</title>
+<title>Donut WebUI Pandalam 2K23 R5 BETA</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   .btn {
@@ -163,17 +163,13 @@ body {font-family: Arial;}
   <p><img src="Achenkoil.jpg" alt="Kochi" width="100" height="100"></p>
   <p>Pandalam</p>
 
-  <p>2K23 R4</p>
-  <p><code>2307.04</code></p>
+  <p>2K23 R5 BETA</p>
+  <p><code>2307.06</code></p>
 
 
-  <button type="button" class="collapsible">What's New in Pandalam? 🔽</button>
+  <button type="button" class="collapsible">What's New in R5? 🔽</button>
   <div class="content">
-    <p>1. New NavBar UI</p>
-    <p>2. New Game</p>
-
-
-
+    <p>1. Calculator</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
@@ -188,7 +184,7 @@ body {font-family: Arial;}
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
-  <a style="text-decoration:none;" href="browser.html"> <button class="btn"><h1>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button class="btn"><h1>🎮</h1></button> </a> <a style="text-decoration:none;" href="copyv86.html"> <button class="btn"><h1>🖥️</h1></button> </a>
+  <a style="text-decoration:none;" href="browser.html"> <button class="btn"><h1>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button class="btn"><h1>🎮</h1></button> </a> <a style="text-decoration:none;" href="copyv86.html"> <button class="btn"><h1>🖥️</h1></button> </a> <a style="text-decoration:none;" href="calculator.html"> <button class="btn"><h1>🧮</h1></button> </a>
 </div>
 </div>
 <script>
