--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Donut WebUI Pandalam 2K23 R5 BETA</title>
+<title>Donut WebUI Pandalam 2K23 R5</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   .btn {
@@ -163,7 +163,7 @@ body {font-family: Arial;}
   <p><img src="Achenkoil.jpg" alt="Kochi" width="100" height="100"></p>
   <p>Pandalam</p>
 
-  <p>2K23 R5 BETA</p>
+  <p>2K23 R5</p>
   <p><code>2307.06</code></p>
 
 
