--- a/calculator.html
+++ b/calculator.html
@@ -43,8 +43,32 @@
             border-radius: 5px;
             border: 2px solid black;
         }
-    </style>
-<style>
+
+
+        .tooltip {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Tooltip text */
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
   .btn {
             cursor: pointer;
             border: 1px solid #3498db;
@@ -73,7 +97,7 @@
 
 .bg-image {
   /* The image used */
-  background-image: url("Achenkoil.jpg");
+  background-image: url("Munnar.jpg");
 
   /* Add the blur effect */
   /* filter: blur(8px);
@@ -184,14 +208,14 @@ body {font-family: Arial;}
 
 
   <div class="tab">
-  <button class="tablinks" onclick="openMenu(event, 'Desktop')">🏠Home</button>
-  <button class="tablinks" onclick="openMenu(event, 'About')">📀myDonut</button>
-  <button class="tablinks" onclick="openMenu(event, 'Apps')">💽Apps</button>
-  <button class="tablinks" onclick="openMenu(event, 'System')">🖥️GPU</button>
+  <button class="tablinks" onclick="openMenu(event, 'Desktop')"><div class="tooltip">🏠Home<span class="tooltiptext">Home Screen</span></div></button>
+  <button class="tablinks" onclick="openMenu(event, 'About')"><div class="tooltip">📀myDonut<span class="tooltiptext">View Donut Info</span></div></button>
+  <button class="tablinks" onclick="openMenu(event, 'Apps')"><div class="tooltip">💽Apps<span class="tooltiptext">All applications</span></div></button>
+  <button class="tablinks" onclick="openMenu(event, 'System')"><div class="tooltip">🖥️GPU<span class="tooltiptext">View GPU Info</span></div></button>
 </div>
 
 <div class="bg-text">
-    <h1><a style="text-decoration:none;" href="index.html">🔙</a> 🧮 Donut Calculator</h1>
+    <h1><a style="text-decoration:none;" href="index.html">👈</a> 🧮 Donut Calculator</h1>
     <table id="calcu">
         <tr>
             <td colspan="3"><input type="text" id="result"></td>
@@ -285,23 +309,24 @@ body {font-family: Arial;}
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
-  <p>Welcome to DonutWebUI Pandalam</p>
+  <p>Welcome to DonutWebUI Munnar</p>
 </div>
 
 <div id="About" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>myDonut</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI Pandalam</p>
-  <p><img src="Achenkoil.jpg" alt="Kochi" width="100" height="100"></p>
-  <p>Pandalam</p>
+  <p><img src="Munnar.jpg" alt="Munnar" width="100" height="100"></p>
+  <p>Munnar</p>
 
   <p>2K23 R5</p>
-  <p><code>2307.06</code></p>
+  <p><code>2307.10</code></p>
 
 
-  <button type="button" class="collapsible">What's New in R5? 🔽</button>
+  <button type="button" class="collapsible">What's New in Munnar? 🔽</button>
   <div class="content">
-    <p>1. Calculator</p>
+    <p>1. Fixed many bugs</p>
+    <p>2. Tooltip</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
