--- a/games.html
+++ b/games.html
@@ -32,7 +32,7 @@
 
 .bg-image {
   /* The image used */
-  background-image: url("Achenkoil.jpg");
+  background-image: url("Munnar.jpg");
 
   /* Add the blur effect */
   filter: blur(8px);
@@ -180,7 +180,7 @@ body {font-family: Arial;}
 
   <div class="bg-image"></div>
   <div class="bg-text">
-  <h1><a style="text-decoration:none;" href="index.html">⬅</a> 🎮 Games</h1>
+  <h1><a style="text-decoration:none;" href="index.html">👈</a> 🎮 Games</h1>
 
 
 <button type="button" class="collapsible">🧱 Tetris</button>
