--- a/calculator.html
+++ b/calculator.html
@@ -97,7 +97,7 @@
 
 .bg-image {
   /* The image used */
-  background-image: url("Munnar.jpg");
+  background-image: url("Bangalore.jpg");
 
   /* Add the blur effect */
   /* filter: blur(8px);
@@ -309,24 +309,24 @@ body {font-family: Arial;}
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
-  <p>Welcome to DonutWebUI Munnar</p>
+  <p>Welcome to DonutWebUI Bangalore</p>
 </div>
 
 <div id="About" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>myDonut</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI Pandalam</p>
-  <p><img src="Munnar.jpg" alt="Munnar" width="100" height="100"></p>
-  <p>Munnar</p>
+  <p><img src="Bangalore.jpg" alt="Bangalore" width="100" height="100"></p>
+  <p>Bangalore</p>
 
   <p>2K23 R5</p>
-  <p><code>2307.10</code></p>
+  <p><code>2307.22</code></p>
 
 
-  <button type="button" class="collapsible">What's New in Munnar? 🔽</button>
+  <button type="button" class="collapsible">What's New in Bangalore? 🔽</button>
   <div class="content">
     <p>1. Fixed many bugs</p>
-    <p>2. Tooltip</p>
+    <p>2. Clock App</p>
   </div>
   <p><a style="text-decoration:none;" href="index.html"><button class="btn2">Check for Updates/Upgrades</button></a></p>
   <p>Developed by Gautham Nair</p>
@@ -341,7 +341,7 @@ body {font-family: Arial;}
 <div id="Apps" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>Apps</h1>
-  <a style="text-decoration:none;" href="browser.html"> <button class="btn"><h1>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button class="btn"><h1>🎮</h1></button> </a> <a style="text-decoration:none;" href="copyv86.html"> <button class="btn"><h1>🖥️</h1></button> </a> <a style="text-decoration:none;" href="calculator.html"> <button class="btn"><h1>🧮</h1></button> </a>
+  <a style="text-decoration:none;" href="browser.html"> <button class="btn"><h1>🌐</h1></button> </a> <a style="text-decoration:none;" href="games.html"> <button class="btn"><h1>🎮</h1></button> </a> <a style="text-decoration:none;" href="copyv86.html"> <button class="btn"><h1>🖥️</h1></button> </a> <a style="text-decoration:none;" href="calculator.html"> <button class="btn"><h1>🧮</h1></button> </a> <a style="text-decoration:none;" href="clock.html"> <button class="btn"><h1>🕛</h1></button> </a>
 </div>
 </div>
 <script>
