--- a/calculator.html
+++ b/calculator.html
@@ -97,7 +97,7 @@
 
 .bg-image {
   /* The image used */
-  background-image: url("Bangalore.jpg");
+  background-image: url("Velocity.jpg");
 
   /* Add the blur effect */
   /* filter: blur(8px);
@@ -309,21 +309,21 @@ body {font-family: Arial;}
 <div id="Desktop" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <span id="clock"></span>
-  <p>Welcome to DonutWebUI Bangalore</p>
+  <p>Welcome to DonutWebUI Velocity</p>
 </div>
 
 <div id="About" class="tabcontent">
   <span onclick="this.parentElement.style.display='none'" class="topright">&times</span>
   <h1>myDonut</h1>
   <h1>📀</h1><p><b>Donut</b>WebUI Pandalam</p>
-  <p><img src="Bangalore.jpg" alt="Bangalore" width="100" height="100"></p>
-  <p>Bangalore</p>
+  <p><img src="Velocity.jpg" alt="Velocity" width="100" height="100"></p>
+  <p>Velocity</p>
 
   <p>2K23 R5</p>
   <p><code>2307.22</code></p>
 
 
-  <button type="button" class="collapsible">What's New in Bangalore? 🔽</button>
+  <button type="button" class="collapsible">What's New in Velocity? 🔽</button>
   <div class="content">
     <p>1. Fixed many bugs</p>
     <p>2. Clock App</p>
