--- a/games.html
+++ b/games.html
@@ -32,7 +32,7 @@
 
 .bg-image {
   /* The image used */
-  background-image: url("Bangalore.jpg");
+  background-image: url("Velocity.jpg");
 
   /* Add the blur effect */
   filter: blur(8px);
